--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
-# render.yaml
+# render.yaml (Corrected for Render's requirements)
 services:
-  # This is your main web application
+  # 1. Your Web Application Service
   - type: web
     name: saas-project-manager
     env: python
-    # This command installs the dependencies from your requirements.txt
+    pythonVersion: "3.11" # Specifying the Python version is good practice
     buildCommand: "pip install -r requirements.txt"
-    # This command starts your application using the Gunicorn server
     startCommand: "gunicorn app:app"
     envVars:
-      # Render will automatically generate a secure secret key
+      # This tells Render to create a secure, random secret key for you
       - key: SECRET_KEY
         generateValue: true
-      # The following variables link your app to the database service below
+      # The following variables connect your app to the database service below
+      # Render will automatically fill these in with the correct credentials
       - key: MYSQL_HOST
         fromDatabase:
           name: saas-mysql-db
@@ -29,38 +29,15 @@ services:
         fromDatabase:
           name: saas-mysql-db
           property: database
-      # Important for Flask to know it's in a production environment
-      - key: PYTHON_VERSION
-        value: 3.11 # Or your preferred Python version
 
-  # This defines your MySQL database
-  - type: pserv
-    name: saas-mysql-db
-    # Using MySQL 8
-    image:
-      url: mysql:8
-    # The 'free' plan is great for getting started
-    plan: free
-    envVars:
+  # 2. Your Database Service (Corrected and Simplified)
+  - type: db  # This is the correct type for a database
+    name: saas-mysql-db # This name must match the 'fromDatabase' name above
+    engine: mysql # Specify the database engine
+    plan: free # The free plan is supported for this service type
+    env: mysql
+    envVars:  
+      - key: MYSQL_ROOT_PASSWORD
+        generateValue: true # Generates a secure password for the root user
       - key: MYSQL_DATABASE
-        fromService:
-          type: web
-          name: saas-project-manager
-          envVarKey: MYSQL_DB
-      - key: MYSQL_USER
-        fromService:
-          type: web
-          name: saas-project-manager
-          envVarKey: MYSQL_USER
-      - key: MYSQL_PASSWORD
-        fromService:
-          type: web
-          name: saas-project-manager
-          envVarKey: MYSQL_PASSWORD
-      # You need to set a root password for the database
-      - key: Rishi@2006
-        generateValue: true
-    disk:
-      name: mysql-data
-      mountPath: /var/lib/mysql
-      sizeGB: 1
+        value: saas_db # The name of your database, can be customized
